# IBS-534

Class05_SpikingTime/: Data_neuron1.mat  Data_neuron2.mat  Neuron1_1ms_Ruorong.mlx  Neuron1_40ms_Ruorong.mlx  Neuron1_ms_Ruorong.m  Neuron1_ms_Ruorong.mlx  Neuron2_ms_Ruorong.mlx  untitled4.m  workInProgress-Neuron1.mat
Class06_ReinforcementLearning/: RL_Homework_2025.docx
Class06_ReinforcementLearning/BIO_450_RL/: FitSimpleQModel.m  Output  Qlearning_driver.m  RL_Homework_2025.docx  SampleDataExp1_1b.txt  SampleDataExp1_2b.txt  SampleDataExp1_3b.txt  SampleDataExp1_4b.txt  SampleDataExp1_5b.txt  SampleDataExp2_1b.txt  SampleDataExp2_2b.txt  SampleDataExp2_3b.txt  SampleDataExp2_4b.txt  SampleDataExp2_5b.txt  ~$_Homework_2025.docx
Class07_ROC/: 3009_ROC.fig  ROC_hw.docx
Class07_ROC/Bio450_Matlab/: ROC_hw1_script.m  ROC_hw2_script.m  ROC_hw_data.mat  SDM_hw_script_final.m  alphacubic.m  d2_list.m  d2_list_time.m  d2_spikes.m  doplotrasthiststim.m  exprenewal.m  hw_liu.m  inhomogpoissongenerator.m  ispikei.m  normalrenewal.m  plotxtimeyraster3.m  poissondistrib.m  psttrialhist.m  psttrialhisttimes.m  psttrialtimes.m  readdatamodel.m  realdata01.mat  realdata02.mat  resp_10846.mat  (+5 more)
Class08_HH/: Book1.xlsx
Class09_synapse/: Assignment_07_synapse.docx  Book1.xlsx
Class10_GLM/: Assignment8.html  Assignment8.ipynb  Untitled-1.ipynb
Class11_RingAttractor/: HW9_Attractor.html  HW9_Attractor.ipynb  HW9_Attractor_bakeup.ipynb  Untitled-1 copy.ipynb
Class12_Calcium/: ElbowMethod.m  NMFonFaces.m  Simplefaces_Workflow.m
env/: ibs534_env.yml  pyproject.toml
(+41 files in other folders)
