[tool.poetry]
name = "IBS534"
version = "0.1.0"
description = ""
authors = ["LUKE_OCEANDIVER <ronghao.zhang.academic@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
nidaqmx = "^0.5.7" 
numpy = "^1.21.2"  
matplotlib = "^3.4.3" 
scipy = "^1.7.1"
pandas = "^1.4"
seaborn = "^0.12"
tqdm = "^4.62.3"
scikit-learn = "^1.2.2"
h5py = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
